--- a/configure.in
+++ b/configure.in
@@ -410,6 +410,7 @@ AC_OUTPUT(  Makefile \
 	    source/tools/linux/Makefile \
 	    source/unix/Makefile \
 	    source/unix/mapeditor/Makefile \
+	    source/unix/asc/Makefile \
 	    data/Makefile \
 	    data/dialog/Makefile \
 	    data/music/Makefile  )
