--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -397,10 +397,22 @@
 			<File
 				RelativePath="..\ndir.h">
 			</File>
+			<File
+				RelativePath=".\resource.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
+			<File
+				RelativePath=".\asc.ICO">
+			</File>
+			<File
+				RelativePath=".\ASC.rc">
+			</File>
+			<File
+				RelativePath=".\icon2.ico">
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
