--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -4,6 +4,7 @@
 	Version="7.10"
 	Name="ASC"
 	ProjectGUID="{B7F902AB-FD64-48FB-B36A-50D48B03447F}"
+	RootNamespace="ASC"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -19,28 +20,29 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;&quot;$(SDL_mixer)&quot;;../../../libs/sdlmm/src;../../../libs/getopt;&quot;../../../libs/libsigc++&quot;;&quot;$(paragui1)/include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;HEXAGON;sgmain;FREEMAPZOOM;_WIN32_;NEWKEYB;_SDL_;_NOASM_"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;&quot;$(SDL_mixer)&quot;;../../../libs/sdlmm/src;../../../libs/getopt;&quot;../../../libs/libsigc++&quot;;&quot;$(paragui12)/include&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;HEXAGON;sgmain;FREEMAPZOOM;_WIN32_;NEWKEYB;_SDL_;_NOASM_;NOMINMAX"
 				MinimalRebuild="TRUE"
-				BasicRuntimeChecks="0"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				DisableLanguageExtensions="FALSE"
 				DefaultCharIsUnsigned="TRUE"
+				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
 				BrowseInformation="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4800;4018;4244;4355;4305;4786"/>
+				DisableSpecificWarnings="4800;4018;4244;4355;4305;4786;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdlevent.lib triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc++.lib paraguid.lib"
+				AdditionalDependencies="triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.debug.lib paragui_static.lib physfs.lib freetypeMT_D.lib"
 				ShowProgress="0"
 				OutputFile="$(OutDir)/bin/ASC.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Debug&quot;;&quot;$(SDL_image)/VisualC/Debug&quot;;&quot;$(OutDir)/lib&quot;;../../../libs/SDLmm/SDLmm/debug;&quot;$(SDL)/VisualC/SDLmain/Debug&quot;;&quot;$(SDL)/VisualC/SDL/Debug&quot;;&quot;../../../libs/libsigc++/sigc++/Debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Debug&quot;;&quot;$(SDL_image)/VisualC/Debug&quot;;&quot;$(OutDir)/lib&quot;;../../../libs/SDLmm/SDLmm/debug;&quot;$(SDL)/VisualC/SDLmain/Debug&quot;;&quot;$(SDL)/VisualC/SDL/Debug&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;../../../debug/lib;&quot;C:\Programme\ascdev\paragui-1.2-cvs\VisualC\paragui_dynamic\Debug&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/ASC.pdb"
@@ -77,25 +79,26 @@
 				Name="VCCLCompilerTool"
 				EnableIntrinsicFunctions="TRUE"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)/include&quot;;../../../libs/SDLmm/include;&quot;$(SDL_mixer)&quot;;../../../libs/;&quot;../../../libs/libsigc++&quot;;../../../libs/getopt"
-				PreprocessorDefinitions="WIN32;NDEBUG;HEXAGON;sgmain;FREEMAPZOOM;_WIN32_;NEWKEYB;_SDL_;_NOASM_"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;&quot;$(SDL_mixer)&quot;;../../../libs/sdlmm/src;../../../libs/getopt;&quot;../../../libs/libsigc++&quot;;&quot;$(paragui12)/include&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;HEXAGON;sgmain;FREEMAPZOOM;_WIN32_;NEWKEYB;_SDL_;_NOASM_;NOMINMAX"
 				RuntimeLibrary="2"
 				DefaultCharIsUnsigned="TRUE"
+				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
 				BrowseInformation="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4800;4018;4244;4355;4305;4786"/>
+				DisableSpecificWarnings="4800;4018;4244;4355;4305;4786;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdlevent.lib triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc++.lib paragui.lib"
+				AdditionalDependencies="sdlevent.lib triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.lib paragui_static.lib physfs.lib freetypeMT.lib"
 				OutputFile="$(OutDir)/bin/ASC.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Release&quot;;&quot;$(SDL_image)/VisualC/Release&quot;;../../../Release/lib;&quot;../../../libs/libsigc++/sigc++/release&quot;;../../../libs/SDLmm/SDLmm/release;&quot;$(SDL)/VisualC/SDLmain/Release&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Release&quot;;&quot;$(SDL_image)/VisualC/Release&quot;;../../../Release/lib;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;../../../libs/SDLmm/SDLmm/release;&quot;$(SDL)/VisualC/SDLmain/Release&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;;&quot;C:\Programme\ascdev\paragui-1.2-cvs\VisualC\paragui_dynamic\Release&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/ASC.pdb"
 				SubSystem="2"
@@ -165,9 +168,6 @@
 				RelativePath="..\..\..\clipboard.cpp">
 			</File>
 			<File
-				RelativePath="..\..\..\CLoadable.cpp">
-			</File>
-			<File
 				RelativePath="..\..\..\containerbase.cpp">
 			</File>
 			<File
@@ -184,6 +184,9 @@
 			</File>
 			<File
 				RelativePath="..\..\..\dlg_box.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\gamedialog.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\gamedlg.cpp">
@@ -204,6 +207,9 @@
 				RelativePath="..\..\..\gameoptions.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\geometry.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\libs\getopt\getopt.c">
 			</File>
 			<File
@@ -214,6 +220,18 @@
 			</File>
 			<File
 				RelativePath="..\..\..\gui.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\guidimension.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\guifunctions.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\guiiconhandler.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\iconrepository.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\itemrepository.cpp">
@@ -249,9 +267,6 @@
 				RelativePath="..\..\..\music.cpp">
 			</File>
 			<File
-				RelativePath="..\..\..\Named.cpp">
-			</File>
-			<File
 				RelativePath="..\ndir.c">
 			</File>
 			<File
@@ -265,6 +280,9 @@
 			</File>
 			<File
 				RelativePath="..\..\..\objecttype.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\overviewmapimage.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\palette.cpp">
@@ -283,12 +301,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\prehistoricevents.cpp">
-			</File>
-			<File
-				RelativePath="..\..\..\Property.cpp">
-			</File>
-			<File
-				RelativePath="..\..\..\PropertyGroup.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\replay.cpp">
@@ -356,6 +368,9 @@
 			<File
 				RelativePath="..\..\..\viewcalculation.cpp">
 			</File>
+			<File
+				RelativePath="..\..\..\weatherarea.cpp">
+			</File>
 			<Filter
 				Name="AI"
 				Filter="">
@@ -390,6 +405,29 @@
 					RelativePath="..\..\..\ai\valuation.cpp">
 				</File>
 			</Filter>
+			<Filter
+				Name="graphics"
+				Filter="">
+				<File
+					RelativePath="..\..\..\graphics\blitter.cpp">
+				</File>
+				<File
+					RelativePath="..\..\..\graphics\drawing.cpp">
+				</File>
+				<File
+					RelativePath="..\..\..\graphics\surface.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="Loki"
+				Filter="">
+				<File
+					RelativePath="..\..\..\libs\loki\Singleton.cpp">
+				</File>
+				<File
+					RelativePath="..\..\..\libs\loki\SmallObj.cpp">
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -418,4 +456,3 @@
 	<Globals>
 	</Globals>
 </VisualStudioProject>
-
